Resolves: tdf#127646 remove undispatched events in dtor

Change-Id: I8d18b0b667a905131fd0edee1f73ebab144e6307